--- a/hospital/index.html
+++ b/hospital/index.html
@@ -28,7 +28,7 @@
 				<div class="wrap">
 				<!--start-logo-->
 				<div class="logo">
-					<a href="index.html" style="font-size: 30px;">Hospital Management system</a>
+					<a href="index.html" style="font-size: 30px;">Hospital Management system yoo</a>
 				</div>
 				<!--end-logo-->
 				<!--start-top-nav-->
